--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,27 @@
 }
 
 .search-input {
-    width: 100%;
-    display: inline;
+    width: 80%;
+    display: inline-block;    
+}
+
+.search-button{
+    display: inline-block;
+    width: 65px;
+    height: 30px;
+    opacity: 0.6;
+    color: #333333;
+    background-color: #f8f8f8;
+    border: 1px solid #d3d3d3;
+    
+}
+
+.custom-form{
+    white-space: nowrap;
+}
+
+.search-button:hover{
+    background-color: #f0F0F0;
+    border-color: #C6C6C6;
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
 }
