--- a/css/styles.css
+++ b/css/styles.css
@@ -11,18 +11,25 @@
 
 .search-input {
     width: 80%;
-    display: inline-block;    
+    height: 30px;
+    border-left: 1px solid #cccccc;
+    border-top: 1px solid #cccccc;
+    border-bottom: 1px solid #cccccc;
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
+    transform: translateX(1px);
+    opacity: 0.6;
 }
 
 .search-button{
-    display: inline-block;
     width: 65px;
     height: 30px;
     opacity: 0.6;
     color: #333333;
     background-color: #f8f8f8;
     border: 1px solid #d3d3d3;
-    
+    border-top-right-radius: 2px;
+    border-bottom-right-radius: 2px;
 }
 
 .custom-form{
@@ -33,4 +40,5 @@
     background-color: #f0F0F0;
     border-color: #C6C6C6;
     box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
+    opacity: 1;
 }
