--- a/css/styles.css
+++ b/css/styles.css
@@ -42,3 +42,17 @@
     box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
     opacity: 1;
 }
+
+.icon-button{
+    width:65px;
+    height: 30px;
+}
+
+.three-dot-icon{
+    margin-right: 15px;
+}
+
+.avatar-image{
+    width: 40px;
+    height: 40px;
+}
