--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
 
 .logo {
     width: 129px;
+    margin-left: 25px;
 }
 
 .search {
@@ -12,6 +13,7 @@
 .search-input {
     width: 80%;
     height: 30px;
+    padding-left: 10px;
     border-left: 1px solid #cccccc;
     border-top: 1px solid #cccccc;
     border-bottom: 1px solid #cccccc;
@@ -21,7 +23,7 @@
     opacity: 0.6;
 }
 
-.search-button{
+.search-button {
     width: 65px;
     height: 30px;
     opacity: 0.6;
@@ -32,27 +34,30 @@
     border-bottom-right-radius: 2px;
 }
 
-.custom-form{
-    white-space: nowrap;
-}
-
-.search-button:hover{
+.search-button:hover {
     background-color: #f0F0F0;
     border-color: #C6C6C6;
     box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
     opacity: 1;
 }
 
-.icon-button{
+.icon-button {
     width:65px;
     height: 30px;
 }
 
-.three-dot-icon{
+.three-dot-icon {
     margin-right: 15px;
 }
 
-.avatar-image{
+.avatar-image {
     width: 40px;
     height: 40px;
+    margin-right: 25px;
+}
+
+/* Main content */
+
+.video-title {
+    font-size: 1rem;
 }
