Added thumbnail video.

--- a/css/styles.css
+++ b/css/styles.css
@@ -61,3 +61,12 @@
 .video-title {
     font-size: 1rem;
 }
+
+.sidebar-video{
+    display: flex;
+    flex-direction: row;
+}
+
+.sidebar-video-title{
+font-weight: bold;
+}
