--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: Roboto, Arial, sans-serif;
+    background-color: #f9f9f9;
 }
 .navbar {
     display: flex;
@@ -10,6 +11,7 @@ html, body {
     align-items: center;
     justify-content: space-between;
     height: 56px;
+    background-color: #ffffff;
 }
 
 .logo {
@@ -105,7 +107,6 @@ html, body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #f9f9f9;
 }
 
 .main-content {
@@ -251,6 +252,7 @@ html, body {
     width: 100%;
     margin-bottom: 8px;
     color: #606060;
+    text-decoration: none;
 }
 
 .sidebar-video-thumbnail {
