--- a/css/styles.css
+++ b/css/styles.css
@@ -145,6 +145,17 @@ html, body {
     margin: 0 4px;
 }
 
+.menu {
+    display: flex;
+    flex-flow: row nowrap;
+    font-size: 13px;
+}
+
+.menu div {
+    width: 16px;
+}
+
+
 .menu a {
     display: flex;
     flex-flow: row nowrap;
@@ -153,12 +164,46 @@ html, body {
     color: inherit;
 }
 
+.menu a div {
+    width: 8px;
+}
+
+.share-button {
+    width: 4px !important;
+}
+
 .menu-icon {
-    width: 24px;
-    height: 24px;
+    width: 20px;
+    height: 20px;
     fill: #606060;
 }
 
+.channel {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+}
+
+.channel-profile-picture {
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+}
+
+.button {
+    background-color: #cc0000;
+    border: none;
+    border-radius: 2px;
+    text-transform: uppercase;
+    color: white;
+    padding: 10px 16px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    margin: 4px 2px;
+    cursor: pointer;
+  }
 
 /* Sidebar video recommendations */
 
@@ -183,7 +228,7 @@ html, body {
 .sidebar-video-title {
     font-weight: bold;
     font-size: 14px;
-    columns: #0d0d0d;;
+    color: #0d0d0d;;
 }
 
 .sidebar-video-info {
