--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,8 @@
 html, body {
+    margin: 0;
+    padding: 0;
     font-family: Roboto, Arial, sans-serif;
+    background-color: #f9f9f9;
 }
 
 /* Navbar */
@@ -7,6 +10,8 @@ html, body {
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
+    height: 56px;
+    background-color: #ffffff;
 }
 
 .logo {
@@ -125,7 +130,6 @@ html, body {
 .video-recommendations {
     flex-grow: 1;
     width: 300px;
-    background-color: lightcyan;
 }
 
 .video-title {
